update index to reflect changes

--- a/src/incognilol/templates/index.html
+++ b/src/incognilol/templates/index.html
@@ -5,8 +5,10 @@
 {%block body%}
 <main class="othermain">
     <p>IncogniLOL is a free and open source front end for <a href="https://9gag.com">9GAG</a> that is lightweight, uses modern formats (such as webp instead of jpg and webm instead of mp4) to save on bandwidth and does not include any tracking elements of 9GAG.</p>
-    <p>Currently, it is in very early development and does not support browsing the homepage or tags. However to use this service on individual posts, you can:</p>
+    <p>Currently, it is in very early development and does not support browsing tags. However to use this service on individual posts, you can:</p>
     <p>9gag.com/gag/xyzabce -> ilol.m3r.one/gag/xyzabce</p>
+    <p>Or to browse the homepage, you can:</p>
+    <p><a href="/home">ilol.m3r.one/home</a></p>
     <p>If you encounter any errors, please open an issue.</p>
 </main>
 {%endblock%}
