make the design tiny bit better
Signed-off-by: m3r <m3r@m3r.one>

--- a/src/incognilol/static/css/home.css
+++ b/src/incognilol/static/css/home.css
@@ -26,3 +26,11 @@
 .black {
     color: black;
 }
+
+.nextbutton {
+    display: inline-block;
+    padding: 0.5rem;
+    color: black;
+    background-color: inherit;
+    border: none;
+}
