--- a/src/incognilol/templates/home.html
+++ b/src/incognilol/templates/home.html
@@ -24,6 +24,6 @@
         <hr class="halfpagewide">
     {% endfor %}
     </section>
-    <button><a class="black" href="/home/{{postlist[-1].nextcursor}}">Next Page</a></button>
+    <button class="nextbutton"><a href="/home/{{postlist[-1].nextcursor}}">Next Page</a></button>
 </main>
 {% endblock %}
