--- a/src/incognilol/static/css/root.css
+++ b/src/incognilol/static/css/root.css
@@ -1,11 +1,11 @@
 :root {
-    --darkbg: #595959;
+    --darkbg: #292929;
     --darktext: #F2F2F2;
     --darklink: #a4a4f5;
 }
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html, body {
