improved accessibility and ux
Signed-off-by: m3r <m3r@m3r.one>

--- a/src/incognilol/templates/gag.html
+++ b/src/incognilol/templates/gag.html
@@ -13,7 +13,7 @@
         {% endif %}
         <p><a href="https://9gag.com/gag/{{gag}}">Original link</a></p>
         <p>Posted by: <a href="https://9gag.com/u/{{op}}">{{op}}</a></p>
-        <p>Posted on: {{uploaddate}}</p>
+        <p>Posted on: {{human_uploaddate}}</p>
         <p>Upvoted {{likes}} times</p>
         <p>Downvoted {{dislikes}} times</p>
     {% endif %}
